# NeuralTrade

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
neuraltrade/: __init__.py
neuraltrade/agents/: __init__.py  graph.py
neuraltrade/cli/: __init__.py
neuraltrade/config/: __init__.py
neuraltrade/dashboard/: __init__.py
neuraltrade/dataflows/: __init__.py
neuraltrade/engine/: __init__.py
neuraltrade/llm/: __init__.py  base.py
neuraltrade/llm/providers/: anthropic_client.py  deepseek_client.py  google_client.py  groq_client.py  openai_client.py  openrouter_client.py
neuraltrade/utils/: __init__.py
